Fixed css issues in hosts bo5 display and x-scrollbar

--- a/client/src/components/MainView/MainView.css
+++ b/client/src/components/MainView/MainView.css
@@ -22,5 +22,5 @@ footer {
     left: 0;
     top: 0;
     z-index: 10;
-    overflow: scroll;
+    overflow-y: scroll;
 }
